--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.port = 27017
 spring.data.mongodb.host = localhost
-spring.data.mongodb.database = test_db
+spring.data.mongodb.database = car_protection_db
