--- a/src/main/resources/custom.properties
+++ b/src/main/resources/custom.properties
@@ -2,3 +2,7 @@
 client.not.found=Requested client - {0} does not exist.
 client.is.empty=It is not possible to perform the operation with an empty client.
 client.exception=An exception occurred when requesting a client.
+
+insurance_policy.not.found=Requested insurance policy - {0} does not exist.
+insurance_policy.is.empty=It is not possible to perform the operation with an empty insurance policy.
+insurance_policy.exception=An exception occurred when requesting a insurance policy.
